--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="container">
         <div class="column">
             <h1>Kalkulator BMI</h1>
-            <p>Berat badan ideal adalah impian semua orang. Tidak hanya memiliki bentuk tubuh yang menunjang penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat. Bagaimana denganmu? Yuk, hitung sekarang di kalkulator BMI.</p>
+            <p>Ingin tahu berat badan idealmu? Gak cuma buat penampilan keren, berat badan ideal juga tanda tubuh sehat, loh! Yuk, cek sekarang pake kalkulator BMI.
+
+            </p>
             
             <form id="bmiForm">
                 <div class="input-group">
